--- a/index.html
+++ b/index.html
@@ -19,5 +19,92 @@
 
     <img src="https://cdn.esquireindia.co.in/article/2025-08-11T14%3A35%3A30.664Z-batman2LEAD%20%281%29.jpg" width="500px" alt="Batman">
     <img src="./Assets/Batman.webp" alt="Batman2">
+
+    <ul>
+        <li>one</li>
+        <li>Two</li>
+        <li>Three</li>
+    </ul>
+
+    <ol>
+        <li>one</li>
+        <li>Two</li>
+        <li>Three</li>
+    </ol>
+
+    <table>
+        <tr>
+            <th>Name</th>
+            <th>Age</th>
+            <th>Location</th>
+        </tr>
+        <tr>
+            <td>Ram</td>
+            <td>20</td>
+            <td>TN</td>
+        </tr>
+        <tr>
+            <td>Ravi</td>
+            <td>22</td>
+            <td>AP</td>
+        </tr>
+        <tr>
+            <td>Kavi</td>
+            <td>25</td>
+            <td>KA</td>
+        </tr>
+    </table>
+
+    <form action="Submit">
+        <label for="">Name:</label>
+        <input type="text" name="userName" placeholder="Enter Your Name" required> <br>
+
+        <label for="">Email:</label>
+        <input type="email" name="userEmail" placeholder="Enter Your Email" required> <br>
+
+        <label for="">Password:</label>
+        <input type="password" name="userPassword" placeholder="Enter Your Password" required> <br>
+
+        <input type="radio" name="gender"> Male
+        <input type="radio" name="gender"> Female <br>
+
+        <input type="checkbox" name="lang"> HTML
+        <input type="checkbox" name="lang"> CSS
+        <input type="checkbox" name="lang"> JS
+        <input type="checkbox" name="lang"> ReactJs <br>
+
+        <textarea role="2" cols="30" placeholder="Enter Your Feedback"></textarea> <br>
+
+        <select name="" id="">
+            <option value="">Enter your Location</option>
+            <option value="">US</option>
+            <option value="">IND</option>
+            <option value="">UK</option>
+        </select> <br>
+
+        <input type="date" name="EventDate"> <br>
+        <input type="time" name="EventTime"> <br>
+
+        <input type="file" name="Upload"> <br>
+        <input type="color" name="color"> <br>
+
+        <button type="submit">SEND</button>
+        <button type="reset">RESTART</button>
+    </form>
+
+    <audio src="./Assets/WhatsApp Audio 2025-08-06 at 22.04.01_5410db5c.dat.unknown" controls></audio>
+    <video src="./Assets/WhatsApp Video 2025-08-05 at 20.15.41_fe989447.mp4" controls></video>
+
+    <header>
+
+    </header>
+
+    <section>
+
+    </section>
+
+    <footer>
+        
+    </footer>
 </body>
 </html>
