--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <input type="checkbox" name="lang"> JS
         <input type="checkbox" name="lang"> ReactJs <br>
 
-        <textarea role="2" cols="30" placeholder="Enter Your Feedback"></textarea> <br>
+        <textarea rows="2" cols="30" placeholder="Enter Your Feedback"></textarea> <br>
 
         <select name="" id="">
             <option value="">Enter your Location</option>
@@ -100,11 +100,11 @@
     </header>
 
     <section>
-
+        
     </section>
 
     <footer>
-        
+
     </footer>
 </body>
 </html>
